// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Title correctly on Dashboard Proyect page 1`] = `
<section
  class="page-header"
>
  <div
    class="container page-header__wrapper"
  >
    <article>
      <h1
        class="page-header__title"
      >
        Some title
      </h1>
      <p
        class="page-header__text"
      >
        Some description
      </p>
    </article>
    <a
      class="button"
      href="/add-proyect"
    >
      AddProyect
    </a>
  </div>
</section>
`;

exports[`Should render Title correctly on Dashboard Task page 1`] = `
<section
  class="page-header"
>
  <div
    class="container page-header__wrapper"
  >
    <article>
      <h1
        class="page-header__title"
      >
        Some title
      </h1>
      <p
        class="page-header__text"
      >
        Some description
      </p>
    </article>
    <a
      class="button"
      href="/add-task/undefined"
    >
      AddTask
    </a>
  </div>
</section>
`;

exports[`Should render Title correctly with no context 1`] = `
<section
  class="page-header"
>
  <div
    class="container page-header__wrapper"
  >
    <article>
      <h1
        class="page-header__title"
      >
        Some title
      </h1>
      <p
        class="page-header__text"
      >
        Some description
      </p>
    </article>
  </div>
</section>
`;
